2008-10-11  Edward Hervey <edward.hervey@collabora.co.uk>

	patch by: Michael Terry <mike@mterry.name>
	* pitivi/bin.py:
	Fix issue when cancelling rendering.
	Fixes #458944

2008-10-11  Edward Hervey <edward.hervey@collabora.co.uk>

	* pitivi/ui/actions.xml:
	* pitivi/ui/mainwindow.py:
	* pitivi/ui/timeline.py:
	* pitivi/ui/Makefile.am:
	Remove usage of simple timeline.
	* pitivi/ui/complexsource.py:
	* pitivi/ui/layerwidgets.py:
	* pitivi/ui/tracklayer.py:
	Also remove files no longer used.

2008-10-10  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/ruler.py:
	Fix similar pending-seek behaviour as did previously in the viewer.

2008-10-09  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/check.py:
	Add a runtime-check for pygoocanvas.

2008-10-09  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/ui/viewer.py:
	Fix pending-seek behaviour.
	Fixes #554602

2008-10-09  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/ui/ruler.py:
	Don't seek if we have an empty timeline.
	Don't set timeouts if the seek failed.

2008-10-09  Edward Hervey  <edward.hervey@collabora.co.uk>

	* pitivi/ui/Makefile.am:
	dist file, even if it's not used, so it doesn't break .po files.

2008-10-09  Edward Hervey  <bilboed@gmail.com>

	* pitivi/ui/ruler.py: (ScaleRuler):
	Don't allocate insanely big pixmaps for double-buffering. Instead,
	allocate smaller ones and do the recalculation in a smart fashion.
	Fixes #552777

2008-10-09  Edward Hervey  <bilboed@gmail.com>

	* pitivi/utils.py:
	Fix 'minutes' values for times > 1hour.

2008-10-01  Edward Hervey  <bilboed@gmail.com>

	Patch by: Thijs Vermeir <thijsveirmer@gmail.com>
	* pitivi/ui/Makefile.am:
	Dist extra file
	Fixes #554544

2008-09-28  Edward Hervey <edward.hervey@collabora.co.uk>

	* configure.ac:
	0.11.1.2 pre-release

2008-09-28  Edward Hervey <edward.hervey@collabora.co.uk>

	* ChangeLog:
	Updating ChangeLog with git-svn information

2008-09-28  Edward Hervey <edward.hervey@collabora.co.uk>
